--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,5 @@
 server:
   port: 8080
-
 spring:
   devtools:
     livereload:
@@ -15,6 +14,24 @@ spring:
       ddl-auto: none
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     show-sql: true
+  security:
+    oauth2:
+      client:
+        registration:
+          sage:
+            client-id: ${SAGE_CLIENT_ID:}
+            client-secret: ${SAGE_CLIENT_SECRET:}
+            scope: full_access
+            authorization-grant-type: authorization_code
+            redirect-uri: ${REDIRECT_URL:}
+            provider: sage
+            client-authentication-method: client_secret_post
+        provider:
+          sage:
+            authorization-uri: https://www.sageone.com/oauth2/auth/central?filter=apiv3.1
+            token-uri: https://oauth.accounting.sage.com/token
+            user-info-uri: https://api.accounting.sage.com/v3.1/user
+            user-name-attribute: email
 
   datasource:
     url: "jdbc:postgresql://localhost:5432/${DATABASE_NAME:}"
